2003-10-27  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document opcontrol --image=

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/opd_events.h:
	* daemon/opd_events.c: move code for handling
	event descriptions here, and share find_counter_event(),
	plus fill_header()

	* daemon/opd_mangling.c:
	* daemon/opd_perfmon.c:
	* daemon/oprofiled.c:
	* daemon/oprofiled.h:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c: changes from
	above

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: fix help text

	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_proc.h:
	* daemon/liblegacy/opd_proc.c: clean up headers
	a bit

2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: check we can get kernel interface

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/liblegacy/Makefile.am: remove unneeded
	-I for abi

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/init.c:
	* daemon/opd_perfmon.c: move timer interrupt checks
	into perfmon

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: use op_get_interface()

	* libop/op_get_interface.c: simplify

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/ui/oprof_start.base.ui:
	* gui/oprof_start.cpp:
	* gui/oprof_start.h: check separate_lib checkbox when
	  separate_kernel_cb is checked

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: allow to reset --image through empty --image=
	  or --image

2003-10-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c: reduce the hash table size somewhat

	* various: fixes for doxygen

2003-10-26  John Levon  <levon@movementarian.org>

	* HACKING:
	* configure.in:
	* Makefile.am:
	* dae/: move all of 2.4 daemon code to ...

	* daemon/liblegacy/: here

	* daemon/Makefile.am:
	* daemon/opd_util.h:
	* daemon/opd_util.c: move to ...

	* daemon/oprofiled.h:
	* daemon/oprofiled.c: here, and call the right operations